feat(chart): show percentage

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           <span class="ch-container-primary ch-fontBold">Tablet</span>
 
           <div>
-            <strong class="ch-primary">60%</strong>
+            <strong class="ch-primary">{{tabletShare}}%</strong>
 
             <span class="ch-secondary">{{tablet}}</span>
           </div>
@@ -33,7 +33,7 @@
           <span class="ch-container-secondary ch-fontBold">Smartphone</span>
 
           <div>
-            <strong class="ch-primary">60%</strong>
+            <strong class="ch-primary">{{smartphoneShare}}%</strong>
 
             <span class="ch-secondary">{{smartphone}}</span>
           </div>
